--- a/acces.html
+++ b/acces.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
 <header><h1 class="i18n" data-fr="Votre accès" data-en="Your access"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Arrivée par la porte principale. Code fourni avant l’arrivée." data-en="Arrival through the main door. Code provided before arrival."></p>
-</main>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Arrivée" data-en="Arrival"></h3><ul><li class="i18n" data-fr="Entrée par la porte principale (rez-de-chaussée)" data-en="Enter via the main door (ground floor)"></li><li class="i18n" data-fr="Code envoyé avant votre arrivée" data-en="Code sent before arrival"></li><li class="i18n" data-fr="GPS : xx avenue du Docteur Fabre, 06160" data-en="GPS: xx avenue du Docteur Fabre, 06160"></li></ul><h3 class="i18n" data-fr="Horaires" data-en="Times"></h3><ul><li class="i18n" data-fr="Check‑in après 15:00 (autonome)" data-en="Self check‑in after 3pm"></li><li class="i18n" data-fr="Check‑out avant 11:00" data-en="Check‑out before 11am"></li><li class="i18n" data-fr="Prévenir en cas de retard" data-en="Inform us if late"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
