--- a/activites.html
+++ b/activites.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
 <header><h1 class="i18n" data-fr="Activités" data-en="Activities"></h1></header>
-<main class="content"><section class="cards vertical fullwidth">
-<a class="card" href="restaurants.html"><i class="fa-solid fa-utensils"></i><p class="i18n" data-fr="Restaurants & Bars" data-en="Restaurants & Bars"></p></a>
-<a class="card" href="plages.html"><i class="fa-solid fa-umbrella-beach"></i><p class="i18n" data-fr="Plages & Loisirs" data-en="Beaches & Leisure"></p></a>
-<a class="card" href="decouvrir.html"><i class="fa-solid fa-map-location-dot"></i><p class="i18n" data-fr="À découvrir" data-en="To discover"></p></a>
-</section></main>
+<main class="content">
+  <section class="cards vertical fullwidth">
+    <a class="card" href="restaurants.html"><i class="fa-solid fa-utensils"></i><p class="i18n" data-fr="Restaurants & Bars" data-en="Restaurants & Bars"></p></a>
+    <a class="card" href="plages.html"><i class="fa-solid fa-umbrella-beach"></i><p class="i18n" data-fr="Plages & Loisirs" data-en="Beaches & Leisure"></p></a>
+    <a class="card" href="decouvrir.html"><i class="fa-solid fa-map-location-dot"></i><p class="i18n" data-fr="À découvrir" data-en="To discover"></p></a>
+  </section>
+</main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -18,6 +21,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
-</script></body></html>
+</script>
+</body></html>
