--- a/asavoir.html
+++ b/asavoir.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
 <header><h1 class="i18n" data-fr="À savoir" data-en="Good to know"></h1></header>
-<main class="content"><section class="cards vertical fullwidth">
-<a class="card" href="acces.html"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre accès" data-en="Your access"></p></a>
-<a class="card" href="wifi.html"><i class="fa-solid fa-wifi"></i><p>Wi‑Fi</p></a>
-<a class="card" href="equipement.html"><i class="fa-solid fa-couch"></i><p class="i18n" data-fr="Équipement" data-en="Equipment"></p></a>
-<a class="card" href="reglement.html"><i class="fa-solid fa-scroll"></i><p class="i18n" data-fr="Règlement intérieur" data-en="House rules"></p></a>
-<a class="card" href="urgence.html"><i class="fa-solid fa-triangle-exclamation"></i><p class="i18n" data-fr="Urgence" data-en="Emergency"></p></a>
-<a class="card" href="dechets.html"><i class="fa-solid fa-recycle"></i><p class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></p></a>
-<a class="card" href="transport.html"><i class="fa-solid fa-bus"></i><p>Transport</p></a>
-</section></main>
+<main class="content">
+  <section class="cards vertical fullwidth">
+    <a class="card" href="acces.html"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre accès" data-en="Your access"></p></a>
+    <a class="card" href="wifi.html"><i class="fa-solid fa-wifi"></i><p>Wi‑Fi</p></a>
+    <a class="card" href="equipement.html"><i class="fa-solid fa-couch"></i><p class="i18n" data-fr="Équipement" data-en="Equipment"></p></a>
+    <a class="card" href="reglement.html"><i class="fa-solid fa-scroll"></i><p class="i18n" data-fr="Règlement intérieur" data-en="House rules"></p></a>
+    <a class="card" href="urgence.html"><i class="fa-solid fa-triangle-exclamation"></i><p class="i18n" data-fr="Urgence" data-en="Emergency"></p></a>
+    <a class="card" href="dechets.html"><i class="fa-solid fa-recycle"></i><p class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></p></a>
+    <a class="card" href="transport.html"><i class="fa-solid fa-bus"></i><p>Transport</p></a>
+  </section>
+</main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -22,6 +25,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
-</script></body></html>
+</script>
+</body></html>
