--- a/code.html
+++ b/code.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
 <header><h1 class="i18n" data-fr="Code d’entrée" data-en="Entry code"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Code temporaire : 1234" data-en="Temporary code: 1234"></p>
-</main>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Sécurité" data-en="Security"></h3><ul><li class="i18n" data-fr="Code temporaire : 1234 (remplacer par le vrai)" data-en="Temporary code: 1234 (replace with real)"></li><li class="i18n" data-fr="Ne pas communiquer à des tiers" data-en="Do not share with third parties"></li><li class="i18n" data-fr="Change régulièrement pour sécurité" data-en="Rotate regularly for security"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
