--- a/dechets.html
+++ b/dechets.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Verre (vert), Papier (jaune), Ordures (gris)." data-en="Glass (green), Paper (yellow), Waste (grey)."></p>
-</main>
+<header><h1 class="i18n" data-fr="Déchets &amp; Tri" data-en="Waste &amp; Recycling"></h1></header>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Tri sélectif" data-en="Sorting"></h3><ul><li class="i18n" data-fr="Verre (bac vert)" data-en="Glass (green bin)"></li><li class="i18n" data-fr="Papier/Carton (bac jaune)" data-en="Paper/Cardboard (yellow bin)"></li><li class="i18n" data-fr="Ordures ménagères (bac gris)" data-en="General waste (grey bin)"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
