--- a/plages.html
+++ b/plages.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Plages & Loisirs" data-en="Beaches & Leisure"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Plages publiques et privées, paddle, jet-ski." data-en="Public and private beaches, paddle, jet-ski."></p>
-</main>
+<header><h1 class="i18n" data-fr="Plages &amp; Loisirs" data-en="Beaches &amp; Leisure"></h1></header>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Plages publiques" data-en="Public beaches"></h3><ul><li class="i18n" data-fr="Sable fin en centre de Juan" data-en="Fine sand in central Juan"></li><li class="i18n" data-fr="Zones familiales en pente douce" data-en="Family-friendly gentle slope"></li><li class="i18n" data-fr="Douches et accès faciles" data-en="Showers and easy access"></li></ul><h3 class="i18n" data-fr="Plages privées" data-en="Private beaches"></h3><ul><li class="i18n" data-fr="Transats &amp; parasols à la journée" data-en="Sunbeds &amp; umbrellas for the day"></li><li class="i18n" data-fr="Restaurants pieds dans le sable" data-en="Restaurants on the sand"></li><li class="i18n" data-fr="Ambiance plus calme" data-en="Quieter vibe"></li></ul><h3 class="i18n" data-fr="Loisirs nautiques" data-en="Water activities"></h3><ul><li class="i18n" data-fr="Paddle &amp; kayak" data-en="Paddle &amp; kayak"></li><li class="i18n" data-fr="Bouées tractées &amp; jet-ski (encadré)" data-en="Towed buoys &amp; jet-ski (supervised)"></li><li class="i18n" data-fr="Bateaux navettes en saison" data-en="Seasonal shuttle boats"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
