--- a/restaurants.html
+++ b/restaurants.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Restaurants & Bars" data-en="Restaurants & Bars"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Suggestions : La Terrasse, Le Bistrot du Port." data-en="Suggestions: La Terrasse, Le Bistrot du Port."></p>
-</main>
+<header><h1 class="i18n" data-fr="Restaurants &amp; Bars" data-en="Restaurants &amp; Bars"></h1></header>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Bord de mer" data-en="Seafront"></h3><ul><li class="i18n" data-fr="Restaurants de plage sur le littoral" data-en="Beach restaurants along the shore"></li><li class="i18n" data-fr="Poissons et fruits de mer" data-en="Fish &amp; seafood"></li><li class="i18n" data-fr="Ambiance coucher de soleil" data-en="Sunset atmosphere"></li></ul><h3 class="i18n" data-fr="Cocktails &amp; soirées" data-en="Cocktails &amp; nights"></h3><ul><li class="i18n" data-fr="Bars près de la Pinède" data-en="Bars near the pine park"></li><li class="i18n" data-fr="Musique live en saison" data-en="Live music in season"></li><li class="i18n" data-fr="Terrasses animées" data-en="Lively terraces"></li></ul><h3 class="i18n" data-fr="Conseils pratiques" data-en="Practical tips"></h3><ul><li class="i18n" data-fr="Pensez à réserver en haute saison" data-en="Reserve in high season"></li><li class="i18n" data-fr="Horaires souvent 12h–14h &amp; 19h–22h" data-en="Typical hours 12–2pm &amp; 7–10pm"></li><li class="i18n" data-fr="Pour les groupes, préférez tôt" data-en="For groups, go early"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
