--- a/transport.html
+++ b/transport.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
 <header><h1 class="i18n" data-fr="Transport" data-en="Transport"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Bus locaux, taxis, vélos. Gare : Antibes." data-en="Local buses, taxis, bikes. Station: Antibes."></p>
-</main>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Se déplacer" data-en="Getting around"></h3><ul><li class="i18n" data-fr="Bus locaux fréquents" data-en="Frequent local buses"></li><li class="i18n" data-fr="Taxis et VTC" data-en="Taxis and rideshares"></li><li class="i18n" data-fr="Gare TER d’Antibes à proximité" data-en="Antibes TER train station nearby"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
