--- a/urgence.html
+++ b/urgence.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anaïs</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
 <header><h1 class="i18n" data-fr="Urgence" data-en="Emergency"></h1></header>
-<main class="content">
-  <p class="i18n" data-fr="Numéros : 17 Police, 18 Pompiers, 15 SAMU, 112 Europe." data-en="Numbers: 17 Police, 18 Fire, 15 Ambulance, 112 EU."></p>
-</main>
+<main class="content"><div class="list"><h3 class="i18n" data-fr="Numéros utiles" data-en="Useful numbers"></h3><ul><li class="i18n" data-fr="Police 17 • Pompiers 18 • SAMU 15 • Europe 112" data-en="Police 17 • Fire 18 • Ambulance 15 • EU 112"></li><li class="i18n" data-fr="Hôte : +33 6 12 34 56 78 (exemple)" data-en="Host: +33 6 12 34 56 78 (example)"></li><li class="i18n" data-fr="Pharmacie la plus proche à quelques minutes" data-en="Nearest pharmacy within minutes"></li></ul></div></main>
 
   <nav class="bottom-nav">
     <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
@@ -16,7 +15,7 @@
   </nav>
 
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.textContent=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
 </body></html>
