--- a/code.html
+++ b/code.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anaïs</title>
+  <title>Code d’entrée</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Code d’entrée" data-en="Entry code"></h1></header>
-<main class="content"><div class="list"><h3 class="i18n" data-fr="Sécurité" data-en="Security"></h3><ul><li class="i18n" data-fr="Code temporaire : 1234 (remplacer par le vrai)" data-en="Temporary code: 1234 (replace with real)"></li><li class="i18n" data-fr="Ne pas communiquer à des tiers" data-en="Do not share with third parties"></li><li class="i18n" data-fr="Change régulièrement pour sécurité" data-en="Rotate regularly for security"></li></ul></div></main>
+<header>
+  <a href="asavoir.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i></a>
+  <h1 class="i18n" data-fr="Code d’entrée" data-en="Entry code"></h1>
+</header>
+<main class="content">
+  <div class="detail-card">
+    <i class="fa-solid fa-key"></i>
+    <h2 class="i18n" data-fr="Code d’entrée" data-en="Entry code"></h2>
+    <ul>
+      <li class="i18n" data-fr="Code temporaire : 1234 (remplacer par le vrai)" data-en="Temporary code: 1234 (replace with real)"></li>
+<li class="i18n" data-fr="Ne pas communiquer à des tiers" data-en="Do not share with third parties"></li>
+<li class="i18n" data-fr="Changé régulièrement pour sécurité" data-en="Rotated regularly for safety"></li>
+    </ul>
+  </div>
+</main>
 
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+    <a href="bienvenue.html" class=""><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+    <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+    <a href="activites.html" class=""><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-en="Activities" data-fr="Activités"></span></a>
   </nav>
-
 <script>
 function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
