--- a/equipement.html
+++ b/equipement.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anaïs</title>
+  <title>Équipement</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Équipement" data-en="Equipment"></h1></header>
-<main class="content"><div class="list"><h3 class="i18n" data-fr="Cuisine" data-en="Kitchen"></h3><ul><li class="i18n" data-fr="Plaques, four, micro‑ondes" data-en="Hob, oven, microwave"></li><li class="i18n" data-fr="Cafetière &amp; bouilloire" data-en="Coffee maker &amp; kettle"></li><li class="i18n" data-fr="Vaisselle &amp; ustensiles" data-en="Dishes &amp; utensils"></li></ul><h3 class="i18n" data-fr="Confort" data-en="Comfort"></h3><ul><li class="i18n" data-fr="Machine à laver" data-en="Washing machine"></li><li class="i18n" data-fr="Sèche‑cheveux" data-en="Hairdryer"></li><li class="i18n" data-fr="Draps &amp; serviettes" data-en="Linens &amp; towels"></li></ul></div></main>
+<header>
+  <a href="asavoir.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i></a>
+  <h1 class="i18n" data-fr="Équipement" data-en="Equipment"></h1>
+</header>
+<main class="content">
+  <div class="detail-card">
+    <i class="fa-solid fa-couch"></i>
+    <h2 class="i18n" data-fr="Équipement" data-en="Equipment"></h2>
+    <ul>
+      <li class="i18n" data-fr="Cuisine équipée (plaques, four, micro-ondes)" data-en="Fitted kitchen (hob, oven, microwave)"></li>
+<li class="i18n" data-fr="Cafetière &amp; bouilloire" data-en="Coffee maker &amp; kettle"></li>
+<li class="i18n" data-fr="Machine à laver, sèche-cheveux, linge fourni" data-en="Washing machine, hairdryer, linens provided"></li>
+    </ul>
+  </div>
+</main>
 
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+    <a href="bienvenue.html" class=""><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+    <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+    <a href="activites.html" class=""><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-en="Activities" data-fr="Activités"></span></a>
   </nav>
-
 <script>
 function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
