--- a/reglement.html
+++ b/reglement.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anaïs</title>
+  <title>Règlement intérieur</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Règlement intérieur" data-en="House rules"></h1></header>
-<main class="content"><div class="list"><h3 class="i18n" data-fr="À respecter" data-en="To respect"></h3><ul><li class="i18n" data-fr="Non‑fumeur à l’intérieur" data-en="No smoking inside"></li><li class="i18n" data-fr="Pas de fêtes" data-en="No parties"></li><li class="i18n" data-fr="Calme après 22h" data-en="Quiet after 10pm"></li></ul></div></main>
+<header>
+  <a href="asavoir.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i></a>
+  <h1 class="i18n" data-fr="Règlement intérieur" data-en="House rules"></h1>
+</header>
+<main class="content">
+  <div class="detail-card">
+    <i class="fa-solid fa-scroll"></i>
+    <h2 class="i18n" data-fr="Règlement intérieur" data-en="House rules"></h2>
+    <ul>
+      <li class="i18n" data-fr="Non-fumeur à l’intérieur" data-en="No smoking inside"></li>
+<li class="i18n" data-fr="Respect du voisinage après 22h" data-en="Quiet hours after 10pm"></li>
+<li class="i18n" data-fr="Animaux sur demande" data-en="Pets on request"></li>
+    </ul>
+  </div>
+</main>
 
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+    <a href="bienvenue.html" class=""><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+    <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+    <a href="activites.html" class=""><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-en="Activities" data-fr="Activités"></span></a>
   </nav>
-
 <script>
 function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
