--- a/wifi.html
+++ b/wifi.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html><html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anaïs</title>
+  <title>Wi‑Fi</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head><body>
-<header><h1 class="i18n" data-fr="Wi‑Fi" data-en="Wi‑Fi"></h1></header>
-<main class="content"><div class="list"><h3 class="i18n" data-fr="Connexion" data-en="Connection"></h3><ul><li class="i18n" data-fr="Nom du réseau (SSID) : AnaisGuest" data-en="Network name (SSID): AnaisGuest"></li><li class="i18n" data-fr="Mot de passe : AnaisGuest2025 (à modifier)" data-en="Password: AnaisGuest2025 (to update)"></li><li class="i18n" data-fr="Astuce : redémarrer la box si besoin" data-en="Tip: reboot the router if needed"></li></ul></div></main>
+<header>
+  <a href="asavoir.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i></a>
+  <h1 class="i18n" data-fr="Wi‑Fi" data-en="Wi‑Fi"></h1>
+</header>
+<main class="content">
+  <div class="detail-card">
+    <i class="fa-solid fa-wifi"></i>
+    <h2 class="i18n" data-fr="Wi‑Fi" data-en="Wi‑Fi"></h2>
+    <ul>
+      <li class="i18n" data-fr="Nom du réseau (SSID) : AnaisGuest" data-en="Network name (SSID): AnaisGuest"></li>
+<li class="i18n" data-fr="Mot de passe : AnaisGuest2025 (à modifier)" data-en="Password: AnaisGuest2025 (update)"></li>
+<li class="i18n" data-fr="Astuce : redémarrer la box si besoin" data-en="Tip: reboot the router if needed"></li>
+    </ul>
+  </div>
+</main>
 
   <nav class="bottom-nav">
-    <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+    <a href="bienvenue.html" class=""><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+    <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+    <a href="activites.html" class=""><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-en="Activities" data-fr="Activités"></span></a>
   </nav>
-
 <script>
 function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
