--- a/activites.html
+++ b/activites.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="page-activites">
 <header><h1 class="i18n" data-fr="Activités" data-en="Activities"></h1></header>
 <main class="content">
   <section class="cards vertical fullwidth">
