--- a/asavoir.html
+++ b/asavoir.html
@@ -6,8 +6,20 @@
   <title>À savoir</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body class="page-asavoir">
+  
+  <style>
+    main.content {
+      max-width: 100% !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+    .cards.vertical.fullwidth {
+      padding: 1rem !important;
+      gap: 1rem !important;
+    }
+  </style>
+  </head>
+<body>
 <header><h1 class="i18n" data-fr="À savoir" data-en="Good to know"></h1></header>
 <main class="content">
   <section class="cards vertical fullwidth">
