--- a/bienvenue.html
+++ b/bienvenue.html
@@ -86,7 +86,7 @@
 <nav class="bottom-nav">
   <a href="bienvenue.html" class="active"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-  <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+  <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités & Commerces" data-en="Activities & Shops"></span></a>
 </nav>
 
 <script>
